Dynamic proxy, AspectJ AOP, cool improvements, and more..